# hyprgaze

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  pyrightconfig.json
src/hyprgaze/: __main__.py  calibration.py  filter.py  tracker.py  warp.py
systemd/: hyprgaze.service.template
tests/: test_calibration.py  test_filter.py  test_tracker_pose.py  test_warp.py
