[project]
name = "hyprgaze"
version = "0.1.0"
description = "Webcam gaze tracking drives Hyprland cursor for focus-follows-gaze"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opencv-python>=4.9",
    "mediapipe>=0.10.14",
    "numpy>=1.26",
]

[project.scripts]
hyprgaze = "hyprgaze.__main__:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-xdist>=3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyprgaze"]
